[package]
name = "rusty-webserver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rusty-webserver"
path = "src/main.rs"

[dependencies]
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
